--- a/project4.html
+++ b/project4.html
@@ -1,51 +1,75 @@
-<!-- for each disease, a normalized stacked bar of age breakdown of death. 
-click a bar and shows you gender and race breakdown in donut chart
-	donut chart shows mf, click mf and race breakdown of a particular year will show up, click a segment and it calibrates for each disease, the age breakdown of the group you selected. click to unselect a group. 
-	last viz that is control is number of people involved with bubbles....
-	(total folks)
--->
-
-<!-- graph of age, # occurence of disease correlated to age
-	stream graph with years shown
-	pie chart with number of deaths total per disease
-	click overall year and disease
---> 
-
-
-
-
-
-
 <!DOCTYPE html>
-<!-- saved from url=(0062)http://rpucella.net/courses/dataviz-fa15/mortality-demo-2.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta charset="utf-8">
-    <title>Mortality Demo</title>
-
-    <!-- load D3 library -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.8/d3.min.js" charset="utf-8"></script>
- <script src="q2.js" charset="utf-8"></script>
-
-    <style type="text/css"></style>
-
-    <style>
-    </style>
-
-  </head>
   
-  <body cz-shortcut-listen="true">
+  <meta charset="utf-8">
+  <title>Mortality Demo</title>
+  <!-- load D3 library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.8/d3.min.js" charset="utf-8"></script>
+  <script src="q2.js" charset="utf-8"></script>
+  <style type="text/css"></style>
+  <style>
+  path {
+  fill: none;
+  stroke: #000;
+  }
+  </style>
+</head>
 
-
-    <div>
-      <svg id="viz-age" width="500" height="500" style=" display:inline-block;">
-      </svg>
-      <!-- <svg id="viz-genders" width="500" height="300" style=" display:inline-block;">
-      </svg> -->
-    </div>
-
+<body cz-shortcut-listen="true">
+  
+  <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis (A16-A19)<br>
+  
+  <input type="checkbox" id="2" onchange="check_changed()">Syphilis (A50-A53)<br>
+  <input type="checkbox" id="3" onchange="check_changed()">Human immunodeficiency virus (HIV) disease (B20-B24)<br>
+  <input type="checkbox" id="4" onchange="check_changed()">Malignant neoplasms (C00-C97)<br>
+  <input type="checkbox" id="5" onchange="check_changed()">Malignant neoplasm of stomach (C16)<br>
+  <input type="checkbox" id="6" onchange="check_changed()">Malignant neoplasms of colon, rectum and anus (C18-C21)<br>
+  <input type="checkbox" id="7" onchange="check_changed()">Malignant neoplasm of pancreas (C25)<br>
+  
+  <input type="checkbox" id="8" onchange="check_changed()">Malignant neoplasms of trachea, bronchus and lung (C33-C34)<br>
+  <input type="checkbox" id="9" onchange="check_changed()">Malignant neoplasm of breast (C50)<br>
+  <input type="checkbox" id="10" onchange="check_changed()">Malignant neoplasms of cervix uteri, corpus uteri and ovary (C53-C56)<br>
+  <input type="checkbox" id="11" onchange="check_changed()">Malignant neoplasm of prostate (C61)<br>
+  <input type="checkbox" id="12" onchange="check_changed()">Malignant neoplasms of urinary tract (C64-C68)<br>
+  <input type="checkbox" id="13" onchange="check_changed()">Non-Hodgkin's lymphoma (C82-C85)<br>
+  
+  <input type="checkbox" id="14" onchange="check_changed()">Leukemia (C91-C95)<br>
+  <input type="checkbox" id="15" onchange="check_changed()">Other malignant neoplasms (C00-C15,C17,C22-C24,C26-C32,C37-C49,C51-C52, C57-C60,C62-C63,C69-C81,C88,C90,C96-C97)<br>
+  <input type="checkbox" id="16" onchange="check_changed()">Diabetes mellitus (E10-E14)<br>
+  <input type="checkbox" id="17" onchange="check_changed()">Alzheimer's disease (G30)<br>
+  <input type="checkbox" id="18" onchange="check_changed()">Major cardiovascular diseases (I00-I78)<br>
+  <input type="checkbox" id="19" onchange="check_changed()">Diseases of heart (I00-I09,I11,I13,I20-I51)<br>
+  
+  <input type="checkbox" id="20" onchange="check_changed()">Hypertensive heart disease with or without renal disease (I11,I13)<br>
+  <input type="checkbox" id="21" onchange="check_changed()">Ischemic heart diseases (I20-I25)<br>
+  <input type="checkbox" id="22" onchange="check_changed()">Other diseases of heart (I00-I09,I26-I51)<br>
+  <input type="checkbox" id="23" onchange="check_changed()">Essential (primary) hypertension and hypertensive renal disease (I10,I12,I15)<br>
+  <input type="checkbox" id="24" onchange="check_changed()">Cerebrovascular diseases (I60-I69)<br>
+  <input type="checkbox" id="25" onchange="check_changed()">Atherosclerosis (I70)<br>
+  <input type="checkbox" id="26" onchange="check_changed()">Other diseases of circulatory system (I71-I78)<br>
+  <input type="checkbox" id="27" onchange="check_changed()">Influenza and pneumonia (J09-J18)<br>
+  <input type="checkbox" id="28" onchange="check_changed()">Chronic lower respiratory diseases (J40-J47)<br>
+  <input type="checkbox" id="29" onchange="check_changed()">Peptic ulcer (K25-K28)<br>
+  <input type="checkbox" id="30" onchange="check_changed()">Chronic liver disease and cirrhosis (K70,K73-K74)<br>
+  <input type="checkbox" id="31" onchange="check_changed()">Nephritis, nephrotic syndrome, and nephrosis (N00-N07,N17-N19,N25-N27)<br>
+  <input type="checkbox" id="32" onchange="check_changed()">Pregnancy, childbirth and the puerperium (O00-O99)<br>
+  <input type="checkbox" id="33" onchange="check_changed()">Certain conditions originating in the perinatal period (P00-P96)<br>
+  <input type="checkbox" id="34" onchange="check_changed()">Congenital malformations, deformations and chromosomal abnormalities (Q00-Q99)<br>
+  <input type="checkbox" id="35" onchange="check_changed(this)">Sudden infant death syndrome (R95)<br>
+  <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome) (R00-R94,R96-R99)<br>
+  <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual) (A00-A09,A20-A49,A54-B19,B25-B99,D00-E07, E15-G25,G31-H93,I80-J06,J20-J39,J60-K22,K29-K66,K71-K72, K75-M99,N10-N15,N20-N23,N28-N98,U04)<br>
+  <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents (V02-V04,V09.0,V12-V14,V19.0-V19.2,V19.4-V19.6, V20-V79,V80.3-V80.5,V81.0-V81.1,V82.0-V82.1,V83-V86,V87.0-V87.8, V88.0-V88.8,V89.0,V89.2)<br>
+  <input type="checkbox" id="39" onchange="check_changed()">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)<br>
+  <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)<br>
+  <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide) (*U01-*U02,X85-Y09,Y87.1)<br>
+  <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)<br>
+  }
+  <div>
+    <svg id="viz-age" width="500" height="500" style=" display:inline-block;">
+    </svg>
+    <!-- <svg id="viz-genders" width="500" height="300" style=" display:inline-block;">
+    </svg> -->
+  </div>
   
   
-
 </body></html>
