--- a/project4.html
+++ b/project4.html
@@ -16,7 +16,7 @@
 </head>
 
 <body cz-shortcut-listen="true">
-  
+  <h1># of deaths by cause (default: all), month, and year</h1>
   <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis (A16-A19)<br>
   
   <input type="checkbox" id="2" onchange="check_changed()">Syphilis (A50-A53)<br>
@@ -59,13 +59,13 @@
   <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome) (R00-R94,R96-R99)<br>
   <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual) (A00-A09,A20-A49,A54-B19,B25-B99,D00-E07, E15-G25,G31-H93,I80-J06,J20-J39,J60-K22,K29-K66,K71-K72, K75-M99,N10-N15,N20-N23,N28-N98,U04)<br>
   <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents (V02-V04,V09.0,V12-V14,V19.0-V19.2,V19.4-V19.6, V20-V79,V80.3-V80.5,V81.0-V81.1,V82.0-V82.1,V83-V86,V87.0-V87.8, V88.0-V88.8,V89.0,V89.2)<br>
-  <input type="checkbox" id="39" onchange="check_changed()">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)<br>
+  <input type="checkbox" id="39" onchange="check_changed(updateCausesView())">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)<br>
   <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)<br>
   <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide) (*U01-*U02,X85-Y09,Y87.1)<br>
   <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)<br>
-  }
+  
   <div>
-    <svg id="viz-age" width="500" height="500" style=" display:inline-block;">
+    <svg id="viz-age" width="500" height="500" style=" display:block;">
     </svg>
     <!-- <svg id="viz-genders" width="500" height="300" style=" display:inline-block;">
     </svg> -->
