created placeholder svg for second viz, added comments for Karina to address later

--- a/project4.html
+++ b/project4.html
@@ -64,10 +64,13 @@
   <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)<br>
   
   <div>
-    <svg id="viz-age" width="500" height="500" style=" display:block;">
+    <!-- Karina: this viz needs to be re-named to reflect the actual information displayed -->
+    <!-- I'm not changing it myself because I don't know everywhere else this name is referenced -->
+    <!-- I am changing it to an inline-block though, just for aesthetics -->
+    <svg id="viz-age" width="500" height="500" style=" display:inline-block;">
     </svg>
-    <!-- <svg id="viz-genders" width="500" height="300" style=" display:inline-block;">
-    </svg> -->
+    <svg id="viz-cause-bubbles" width="500" height="500" style=" display:inline-block;">
+    </svg>
   </div>
   
   
