--- a/project4.html
+++ b/project4.html
@@ -13,61 +13,77 @@
   }
   </style>
 </head>
-
 <body cz-shortcut-listen="true">
   <h1># of deaths by cause (default: all), month, and year</h1>
-  <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis (A16-A19)<br>
+  <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis (A16-A19)</input></input><br>
   
-  <input type="checkbox" id="2" onchange="check_changed()">Syphilis (A50-A53)<br>
-  <input type="checkbox" id="3" onchange="check_changed()">Human immunodeficiency virus (HIV) disease (B20-B24)<br>
-  <input type="checkbox" id="4" onchange="check_changed()">Malignant neoplasms (C00-C97)<br>
-  <input type="checkbox" id="5" onchange="check_changed()">Malignant neoplasm of stomach (C16)<br>
-  <input type="checkbox" id="6" onchange="check_changed()">Malignant neoplasms of colon, rectum and anus (C18-C21)<br>
-  <input type="checkbox" id="7" onchange="check_changed()">Malignant neoplasm of pancreas (C25)<br>
+  <input type="checkbox" id="2" onchange="check_changed()">Syphilis (A50-A53)</input><br>
+  <input type="checkbox" id="3" onchange="check_changed()">Human immunodeficiency virus (HIV) disease (B20-B24)</input><br>
+  <input type="checkbox" id="4" onchange="check_changed()">Malignant neoplasms (C00-C97)</input><br>
+  <input type="checkbox" id="5" onchange="check_changed()">Malignant neoplasm of stomach (C16)</input><br>
+  <input type="checkbox" id="6" onchange="check_changed()">Malignant neoplasms of colon, rectum and anus (C18-C21)</input><br>
+  <input type="checkbox" id="7" onchange="check_changed()">Malignant neoplasm of pancreas (C25)</input><br>
   
-  <input type="checkbox" id="8" onchange="check_changed()">Malignant neoplasms of trachea, bronchus and lung (C33-C34)<br>
-  <input type="checkbox" id="9" onchange="check_changed()">Malignant neoplasm of breast (C50)<br>
-  <input type="checkbox" id="10" onchange="check_changed()">Malignant neoplasms of cervix uteri, corpus uteri and ovary (C53-C56)<br>
-  <input type="checkbox" id="11" onchange="check_changed()">Malignant neoplasm of prostate (C61)<br>
-  <input type="checkbox" id="12" onchange="check_changed()">Malignant neoplasms of urinary tract (C64-C68)<br>
-  <input type="checkbox" id="13" onchange="check_changed()">Non-Hodgkin's lymphoma (C82-C85)<br>
+  <input type="checkbox" id="8" onchange="check_changed()">Malignant neoplasms of trachea, bronchus and lung (C33-C34)</input><br>
+  <input type="checkbox" id="9" onchange="check_changed()">Malignant neoplasm of breast (C50)</input><br>
+  <input type="checkbox" id="10" onchange="check_changed()">Malignant neoplasms of cervix uteri, corpus uteri and ovary (C53-C56)</input><br>
+  <input type="checkbox" id="11" onchange="check_changed()">Malignant neoplasm of prostate (C61)</input><br>
+  <input type="checkbox" id="12" onchange="check_changed()">Malignant neoplasms of urinary tract (C64-C68)</input><br>
+  <input type="checkbox" id="13" onchange="check_changed()">Non-Hodgkin's lymphoma (C82-C85)</input><br>
   
-  <input type="checkbox" id="14" onchange="check_changed()">Leukemia (C91-C95)<br>
-  <input type="checkbox" id="15" onchange="check_changed()">Other malignant neoplasms (C00-C15,C17,C22-C24,C26-C32,C37-C49,C51-C52, C57-C60,C62-C63,C69-C81,C88,C90,C96-C97)<br>
-  <input type="checkbox" id="16" onchange="check_changed()">Diabetes mellitus (E10-E14)<br>
-  <input type="checkbox" id="17" onchange="check_changed()">Alzheimer's disease (G30)<br>
-  <input type="checkbox" id="18" onchange="check_changed()">Major cardiovascular diseases (I00-I78)<br>
-  <input type="checkbox" id="19" onchange="check_changed()">Diseases of heart (I00-I09,I11,I13,I20-I51)<br>
+  <input type="checkbox" id="14" onchange="check_changed()">Leukemia (C91-C95)</input><br>
+  <input type="checkbox" id="15" onchange="check_changed()">Other malignant neoplasms (C00-C15,C17,C22-C24,C26-C32,C37-C49,C51-C52, C57-C60,C62-C63,C69-C81,C88,C90,C96-C97)</input><br>
+  <input type="checkbox" id="16" onchange="check_changed()">Diabetes mellitus (E10-E14)</input><br>
+  <input type="checkbox" id="17" onchange="check_changed()">Alzheimer's disease (G30)</input><br>
+  <input type="checkbox" id="18" onchange="check_changed()">Major cardiovascular diseases (I00-I78)</input><br>
+  <input type="checkbox" id="19" onchange="check_changed()">Diseases of heart (I00-I09,I11,I13,I20-I51)</input><br>
   
-  <input type="checkbox" id="20" onchange="check_changed()">Hypertensive heart disease with or without renal disease (I11,I13)<br>
-  <input type="checkbox" id="21" onchange="check_changed()">Ischemic heart diseases (I20-I25)<br>
-  <input type="checkbox" id="22" onchange="check_changed()">Other diseases of heart (I00-I09,I26-I51)<br>
-  <input type="checkbox" id="23" onchange="check_changed()">Essential (primary) hypertension and hypertensive renal disease (I10,I12,I15)<br>
-  <input type="checkbox" id="24" onchange="check_changed()">Cerebrovascular diseases (I60-I69)<br>
-  <input type="checkbox" id="25" onchange="check_changed()">Atherosclerosis (I70)<br>
-  <input type="checkbox" id="26" onchange="check_changed()">Other diseases of circulatory system (I71-I78)<br>
-  <input type="checkbox" id="27" onchange="check_changed()">Influenza and pneumonia (J09-J18)<br>
-  <input type="checkbox" id="28" onchange="check_changed()">Chronic lower respiratory diseases (J40-J47)<br>
-  <input type="checkbox" id="29" onchange="check_changed()">Peptic ulcer (K25-K28)<br>
-  <input type="checkbox" id="30" onchange="check_changed()">Chronic liver disease and cirrhosis (K70,K73-K74)<br>
-  <input type="checkbox" id="31" onchange="check_changed()">Nephritis, nephrotic syndrome, and nephrosis (N00-N07,N17-N19,N25-N27)<br>
-  <input type="checkbox" id="32" onchange="check_changed()">Pregnancy, childbirth and the puerperium (O00-O99)<br>
-  <input type="checkbox" id="33" onchange="check_changed()">Certain conditions originating in the perinatal period (P00-P96)<br>
-  <input type="checkbox" id="34" onchange="check_changed()">Congenital malformations, deformations and chromosomal abnormalities (Q00-Q99)<br>
-  <input type="checkbox" id="35" onchange="check_changed(this)">Sudden infant death syndrome (R95)<br>
-  <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome) (R00-R94,R96-R99)<br>
-  <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual) (A00-A09,A20-A49,A54-B19,B25-B99,D00-E07, E15-G25,G31-H93,I80-J06,J20-J39,J60-K22,K29-K66,K71-K72, K75-M99,N10-N15,N20-N23,N28-N98,U04)<br>
-  <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents (V02-V04,V09.0,V12-V14,V19.0-V19.2,V19.4-V19.6, V20-V79,V80.3-V80.5,V81.0-V81.1,V82.0-V82.1,V83-V86,V87.0-V87.8, V88.0-V88.8,V89.0,V89.2)<br>
-  <input type="checkbox" id="39" onchange="check_changed(updateCausesView())">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)<br>
-  <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)<br>
-  <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide) (*U01-*U02,X85-Y09,Y87.1)<br>
-  <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)<br>
+  <input type="checkbox" id="20" onchange="check_changed()">Hypertensive heart disease with or without renal disease (I11,I13)</input><br>
+  <input type="checkbox" id="21" onchange="check_changed()">Ischemic heart diseases (I20-I25)</input><br>
+  <input type="checkbox" id="22" onchange="check_changed()">Other diseases of heart (I00-I09,I26-I51)</input><br>
+  <input type="checkbox" id="23" onchange="check_changed()">Essential (primary) hypertension and hypertensive renal disease (I10,I12,I15)</input><br>
+  <input type="checkbox" id="24" onchange="check_changed()">Cerebrovascular diseases (I60-I69)</input><br>
+  <input type="checkbox" id="25" onchange="check_changed()">Atherosclerosis (I70)</input><br>
+  <input type="checkbox" id="26" onchange="check_changed()">Other diseases of circulatory system (I71-I78)</input><br>
+  <input type="checkbox" id="27" onchange="check_changed()">Influenza and pneumonia (J09-J18)</input><br>
+  <input type="checkbox" id="28" onchange="check_changed()">Chronic lower respiratory diseases (J40-J47)</input><br>
+  <input type="checkbox" id="29" onchange="check_changed()">Peptic ulcer (K25-K28)</input><br>
+  <input type="checkbox" id="30" onchange="check_changed()">Chronic liver disease and cirrhosis (K70,K73-K74)</input><br>
+  <input type="checkbox" id="31" onchange="check_changed()">Nephritis, nephrotic syndrome, and nephrosis (N00-N07,N17-N19,N25-N27)</input><br>
+  <input type="checkbox" id="32" onchange="check_changed()">Pregnancy, childbirth and the puerperium (O00-O99)</input><br>
+  <input type="checkbox" id="33" onchange="check_changed()">Certain conditions originating in the perinatal period (P00-P96)</input><br>
+  <input type="checkbox" id="34" onchange="check_changed()">Congenital malformations, deformations and chromosomal abnormalities (Q00-Q99)</input><br>
+  <input type="checkbox" id="35" onchange="check_changed(this)">Sudden infant death syndrome (R95)</input><br>
+  <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome) (R00-R94,R96-R99)</input><br>
+  <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual) (A00-A09,A20-A49,A54-B19,B25-B99,D00-E07, E15-G25,G31-H93,I80-J06,J20-J39,J60-K22,K29-K66,K71-K72, K75-M99,N10-N15,N20-N23,N28-N98,U04)</input><br>
+  <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents (V02-V04,V09.0,V12-V14,V19.0-V19.2,V19.4-V19.6, V20-V79,V80.3-V80.5,V81.0-V81.1,V82.0-V82.1,V83-V86,V87.0-V87.8, V88.0-V88.8,V89.0,V89.2)</input><br>
+  <input type="checkbox" id="39" onchange="check_changed(updateCausesView())">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)</input><br>
+  <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)</input><br>
+  <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide) (*U01-*U02,X85-Y09,Y87.1)</input><br>
+  <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)</input><br>
   
   <div>
-    <!-- Karina: this viz needs to be re-named to reflect the actual information displayed -->
-    <!-- I'm not changing it myself because I don't know everywhere else this name is referenced -->
-    <!-- I am changing it to an inline-block though, just for aesthetics -->
-    <svg id="viz-age" width="500" height="500" style=" display:inline-block;">
+    <div>
+      <input type="checkbox" id="age0" onchange="check_changed()">1-5</input><br>
+      <input type="checkbox" id="age1" onchange="check_changed()">5-12</input><br>
+      <input type="checkbox" id="age2" onchange="check_changed()">12-18</input><br>
+      <input type="checkbox" id="age3" onchange="check_changed()">19-29</input><br>
+      <input type="checkbox" id="age4" onchange="check_changed()">30-39</input><br>
+      <input type="checkbox" id="age5" onchange="check_changed()">40-49</input><br>
+      <input type="checkbox" id="age6" onchange="check_changed()">50-59</input><br>
+      <input type="checkbox" id="age7" onchange="check_changed()">60-69</input><br>
+      <input type="checkbox" id="age8" onchange="check_changed()">70-79</input><br>
+      <input type="checkbox" id="age9" onchange="check_changed()">80-89</input><br>
+      <input type="checkbox" id="age10" onchange="check_changed()">90-99</input><br>
+      <input type="checkbox" id="age11" onchange="check_changed()">100+</input><br>
+      
+      <input type="checkbox" id="2003" onchange="check_changed()">2003</input><br>
+      <input type="checkbox" id="2008" onchange="check_changed()">2008</input><br>
+      <input type="checkbox" id="2013" onchange="check_changed()">2013</input><br>
+    </div>
+    <h1># of deaths by cause (default: all), month, and year</h1>
+    <h3 id="filter-items"></h3>
+    <svg id="viz-monthly-mortality" width="500" height="500" style=" display:inline-block;">
     </svg>
     <svg id="viz-cause-bubbles" width="500" height="500" style=" display:inline-block;">
     </svg>
