got rid of the numbers and stuff in the cause descriptions because it was long and ugly, means nothing to the viewer anyway, and it was generally driving me crazy

--- a/project4.html
+++ b/project4.html
@@ -15,52 +15,52 @@
 </head>
 <body cz-shortcut-listen="true">
   <h1># of deaths by cause (default: all), month, and year</h1>
-  <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis (A16-A19)</input></input><br>
+  <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis</input></input><br>
   
-  <input type="checkbox" id="2" onchange="check_changed()">Syphilis (A50-A53)</input><br>
-  <input type="checkbox" id="3" onchange="check_changed()">Human immunodeficiency virus (HIV) disease (B20-B24)</input><br>
-  <input type="checkbox" id="4" onchange="check_changed()">Malignant neoplasms (C00-C97)</input><br>
-  <input type="checkbox" id="5" onchange="check_changed()">Malignant neoplasm of stomach (C16)</input><br>
-  <input type="checkbox" id="6" onchange="check_changed()">Malignant neoplasms of colon, rectum and anus (C18-C21)</input><br>
-  <input type="checkbox" id="7" onchange="check_changed()">Malignant neoplasm of pancreas (C25)</input><br>
+  <input type="checkbox" id="2" onchange="check_changed()">Syphilis</input><br>
+  <input type="checkbox" id="3" onchange="check_changed()">Human immunodeficiency virus (HIV)</input><br>
+  <input type="checkbox" id="4" onchange="check_changed()">Malignant neoplasms</input><br>
+  <input type="checkbox" id="5" onchange="check_changed()">Malignant neoplasm of stomach</input><br>
+  <input type="checkbox" id="6" onchange="check_changed()">Malignant neoplasms of colon, rectum and anus</input><br>
+  <input type="checkbox" id="7" onchange="check_changed()">Malignant neoplasm of pancreas</input><br>
   
-  <input type="checkbox" id="8" onchange="check_changed()">Malignant neoplasms of trachea, bronchus and lung (C33-C34)</input><br>
-  <input type="checkbox" id="9" onchange="check_changed()">Malignant neoplasm of breast (C50)</input><br>
-  <input type="checkbox" id="10" onchange="check_changed()">Malignant neoplasms of cervix uteri, corpus uteri and ovary (C53-C56)</input><br>
-  <input type="checkbox" id="11" onchange="check_changed()">Malignant neoplasm of prostate (C61)</input><br>
-  <input type="checkbox" id="12" onchange="check_changed()">Malignant neoplasms of urinary tract (C64-C68)</input><br>
-  <input type="checkbox" id="13" onchange="check_changed()">Non-Hodgkin's lymphoma (C82-C85)</input><br>
+  <input type="checkbox" id="8" onchange="check_changed()">Malignant neoplasms of trachea, bronchus and lung</input><br>
+  <input type="checkbox" id="9" onchange="check_changed()">Malignant neoplasm of breast</input><br>
+  <input type="checkbox" id="10" onchange="check_changed()">Malignant neoplasms of cervix uteri, corpus uteri and ovary</input><br>
+  <input type="checkbox" id="11" onchange="check_changed()">Malignant neoplasm of prostate</input><br>
+  <input type="checkbox" id="12" onchange="check_changed()">Malignant neoplasms of urinary tract</input><br>
+  <input type="checkbox" id="13" onchange="check_changed()">Non-Hodgkin's lymphoma</input><br>
   
-  <input type="checkbox" id="14" onchange="check_changed()">Leukemia (C91-C95)</input><br>
-  <input type="checkbox" id="15" onchange="check_changed()">Other malignant neoplasms (C00-C15,C17,C22-C24,C26-C32,C37-C49,C51-C52, C57-C60,C62-C63,C69-C81,C88,C90,C96-C97)</input><br>
-  <input type="checkbox" id="16" onchange="check_changed()">Diabetes mellitus (E10-E14)</input><br>
-  <input type="checkbox" id="17" onchange="check_changed()">Alzheimer's disease (G30)</input><br>
-  <input type="checkbox" id="18" onchange="check_changed()">Major cardiovascular diseases (I00-I78)</input><br>
-  <input type="checkbox" id="19" onchange="check_changed()">Diseases of heart (I00-I09,I11,I13,I20-I51)</input><br>
+  <input type="checkbox" id="14" onchange="check_changed()">Leukemia</input><br>
+  <input type="checkbox" id="15" onchange="check_changed()">Other malignant neoplasms</input><br>
+  <input type="checkbox" id="16" onchange="check_changed()">Diabetes mellitus</input><br>
+  <input type="checkbox" id="17" onchange="check_changed()">Alzheimer's disease)</input><br>
+  <input type="checkbox" id="18" onchange="check_changed()">Major cardiovascular diseases</input><br>
+  <input type="checkbox" id="19" onchange="check_changed()">Diseases of heart</input><br>
   
-  <input type="checkbox" id="20" onchange="check_changed()">Hypertensive heart disease with or without renal disease (I11,I13)</input><br>
-  <input type="checkbox" id="21" onchange="check_changed()">Ischemic heart diseases (I20-I25)</input><br>
-  <input type="checkbox" id="22" onchange="check_changed()">Other diseases of heart (I00-I09,I26-I51)</input><br>
-  <input type="checkbox" id="23" onchange="check_changed()">Essential (primary) hypertension and hypertensive renal disease (I10,I12,I15)</input><br>
-  <input type="checkbox" id="24" onchange="check_changed()">Cerebrovascular diseases (I60-I69)</input><br>
-  <input type="checkbox" id="25" onchange="check_changed()">Atherosclerosis (I70)</input><br>
-  <input type="checkbox" id="26" onchange="check_changed()">Other diseases of circulatory system (I71-I78)</input><br>
-  <input type="checkbox" id="27" onchange="check_changed()">Influenza and pneumonia (J09-J18)</input><br>
-  <input type="checkbox" id="28" onchange="check_changed()">Chronic lower respiratory diseases (J40-J47)</input><br>
-  <input type="checkbox" id="29" onchange="check_changed()">Peptic ulcer (K25-K28)</input><br>
-  <input type="checkbox" id="30" onchange="check_changed()">Chronic liver disease and cirrhosis (K70,K73-K74)</input><br>
-  <input type="checkbox" id="31" onchange="check_changed()">Nephritis, nephrotic syndrome, and nephrosis (N00-N07,N17-N19,N25-N27)</input><br>
-  <input type="checkbox" id="32" onchange="check_changed()">Pregnancy, childbirth and the puerperium (O00-O99)</input><br>
-  <input type="checkbox" id="33" onchange="check_changed()">Certain conditions originating in the perinatal period (P00-P96)</input><br>
-  <input type="checkbox" id="34" onchange="check_changed()">Congenital malformations, deformations and chromosomal abnormalities (Q00-Q99)</input><br>
-  <input type="checkbox" id="35" onchange="check_changed(this)">Sudden infant death syndrome (R95)</input><br>
-  <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome) (R00-R94,R96-R99)</input><br>
-  <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual) (A00-A09,A20-A49,A54-B19,B25-B99,D00-E07, E15-G25,G31-H93,I80-J06,J20-J39,J60-K22,K29-K66,K71-K72, K75-M99,N10-N15,N20-N23,N28-N98,U04)</input><br>
-  <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents (V02-V04,V09.0,V12-V14,V19.0-V19.2,V19.4-V19.6, V20-V79,V80.3-V80.5,V81.0-V81.1,V82.0-V82.1,V83-V86,V87.0-V87.8, V88.0-V88.8,V89.0,V89.2)</input><br>
-  <input type="checkbox" id="39" onchange="check_changed(updateCausesView())">All other and unspecified accidents and adverse effects (V01,V05-V06,V09.1,V09.3-V09.9,V10-V11,V15-V18,V19.3,V19.8-V19.9, V80.0-V80.2,V80.6-V80.9,V81.2-V81.9,V82.2-V82.9,V87.9,V88.9,V89.1, V89.3,V89.9,V90-X59,Y40-Y86,Y88)</input><br>
-  <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)</input><br>
-  <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide) (*U01-*U02,X85-Y09,Y87.1)</input><br>
-  <input type="checkbox" id="42" onchange="check_changed()">All other external causes (Y10-Y36,Y87.2,Y89)</input><br>
+  <input type="checkbox" id="20" onchange="check_changed()">Hypertensive heart disease with or without renal disease</input><br>
+  <input type="checkbox" id="21" onchange="check_changed()">Ischemic heart diseases</input><br>
+  <input type="checkbox" id="22" onchange="check_changed()">Other diseases of heart</input><br>
+  <input type="checkbox" id="23" onchange="check_changed()">Essential (primary) hypertension and hypertensive renal disease</input><br>
+  <input type="checkbox" id="24" onchange="check_changed()">Cerebrovascular diseases</input><br>
+  <input type="checkbox" id="25" onchange="check_changed()">Atherosclerosis</input><br>
+  <input type="checkbox" id="26" onchange="check_changed()">Other diseases of circulatory system</input><br>
+  <input type="checkbox" id="27" onchange="check_changed()">Influenza and pneumonia</input><br>
+  <input type="checkbox" id="28" onchange="check_changed()">Chronic lower respiratory diseases</input><br>
+  <input type="checkbox" id="29" onchange="check_changed()">Peptic ulcer</input><br>
+  <input type="checkbox" id="30" onchange="check_changed()">Chronic liver disease and cirrhosis</input><br>
+  <input type="checkbox" id="31" onchange="check_changed()">Nephritis, nephrotic syndrome, and nephrosis</input><br>
+  <input type="checkbox" id="32" onchange="check_changed()">Pregnancy, childbirth and the puerperium</input><br>
+  <input type="checkbox" id="33" onchange="check_changed()">Certain conditions originating in the perinatal period</input><br>
+  <input type="checkbox" id="34" onchange="check_changed()">Congenital malformations, deformations and chromosomal abnormalities</input><br>
+  <input type="checkbox" id="35" onchange="check_changed(this)">Sudden infant death syndrome</input><br>
+  <input type="checkbox" id="36" onchange="check_changed()">Symptoms, signs and abnormal clinical and laboratory findings, not  elsewhere classified (excluding Sudden infant death syndrome)</input><br>
+  <input type="checkbox" id="37" onchange="check_changed()">All other diseases (Residual)</input><br>
+  <input type="checkbox" id="38" onchange="check_changed()">Motor vehicle accidents</input><br>
+  <input type="checkbox" id="39" onchange="check_changed(updateCausesView())">All other and unspecified accidents and adverse effects</input><br>
+  <input type="checkbox" id="40" onchange="check_changed()">Intentional self-harm (suicide)</input><br>
+  <input type="checkbox" id="41" onchange="check_changed()">Assault (homicide)</input><br>
+  <input type="checkbox" id="42" onchange="check_changed()">All other external causes</input><br>
   
   <div>
     <div>
