--- a/project4.html
+++ b/project4.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body cz-shortcut-listen="true">
-  <h1># of deaths by cause (default: all), month, and year</h1>
+  <h1># of deaths by selected causes (default: all)</h1>
   <input type="checkbox" id="1" onchange="check_changed()">Tuberculosis</input></input><br>
   
   <input type="checkbox" id="2" onchange="check_changed()">Syphilis</input><br>
@@ -81,7 +81,7 @@
       <input type="checkbox" id="2008" onchange="check_changed()">2008</input><br>
       <input type="checkbox" id="2013" onchange="check_changed()">2013</input><br>
     </div>
-    <h1># of deaths by cause (default: all), month, and year</h1>
+
     <h3 id="filter-items"></h3>
     <svg id="viz-monthly-mortality" width="500" height="500" style=" display:inline-block;">
     </svg>
